--- a/.github/workflows/auto-code-review.yml
+++ b/.github/workflows/auto-code-review.yml
@@ -27,14 +27,23 @@ jobs:
         # diff.txt 내용을 로그로 출력 (선택사항)
         cat diff.txt
 
-    - name: Send diff text to server
-      uses: fjogeleit/http-request-action@v1
-      with:
-        url: 'https://52ba-220-94-146-69.ngrok-free.app/review'
-        method: 'POST'
-        contentType: multipart/form-data
-        files: |
-          file=@diff.txt
-        data: |
-          pr_number=${{ github.event.pull_request.number }}
-          repo=${{ github.repository }}
+    # - name: Send diff text to server
+    #   uses: fjogeleit/http-request-action@v1
+    #   with:
+    #     url: 'https://52ba-220-94-146-69.ngrok-free.app/review'
+    #     method: 'POST'
+    #     contentType: multipart/form-data
+    #     files: |
+    #       file=@diff.txt
+    #     data: |
+    #       pr_number=${{ github.event.pull_request.number }}
+    #       repo=${{ github.repository }}
+
+
+    - name: Send diff file to server
+      run: |
+        curl -X POST https://52ba-220-94-146-69.ngrok-free.app/review \
+        -H "Content-Type: multipart/form-data" \
+        -F "file=@diff.txt" \
+        -F "pr_number=${{ github.event.pull_request.number }}" \
+        -F "repo=${{ github.repository }}"
