--- a/.github/workflows/auto-code-review.yml
+++ b/.github/workflows/auto-code-review.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Send diff file to server
       run: |
-        curl -X POST https://52ba-220-94-146-69.ngrok-free.app/review \
+        curl -X POST https://701c-220-94-146-69.ngrok-free.app/review \
         -H "Content-Type: multipart/form-data" \
         -F "file=@diff.txt" \
         -F "pr_number=${{ github.event.pull_request.number }}" \
