--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
+    "got": "^14.4.2",
     "llamaindex": "^0.5.19",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
