--- a/.github/workflows/auto-code-review.yml
+++ b/.github/workflows/auto-code-review.yml
@@ -33,4 +33,4 @@ jobs:
         -H "Content-Type: multipart/form-data" \
         -F "file=@diff.txt" \
         -F "prNumber=${{ github.event.pull_request.number }}" \
-        -F "repo=${{ github.repository }}"
+        -F "repo=${{ github.repository }}" &
