--- a/.github/workflows/auto-code-review.yml
+++ b/.github/workflows/auto-code-review.yml
@@ -29,9 +29,9 @@ jobs:
 
     - name: Send diff file to server
       run: |
-        curl -X POST --max-time 60  https://secretly-fancy-starfish.ngrok-free.app/review \
+        curl -X POST https://secretly-fancy-starfish.ngrok-free.app/review \
         -H "Content-Type: multipart/form-data" \
         -F "file=@diff.txt" \ 
         -F "prNumber=${{ github.event.pull_request.number }}" \
         -F "owner=${{ github.repository_owner }}" \
-        -F "repo=${{ github.repository }}" &
+        -F "repo=${{ github.repository }}"
