--- a/.github/workflows/auto-code-review.yml
+++ b/.github/workflows/auto-code-review.yml
@@ -10,12 +10,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+    
       - name: Set up Node.js
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - run: npm run build
+    
+      - name: Install dependencies
+        run: npm install
+    
+      - name: Build project
+        run: npm run build
+
+    # steps:
+    #   - name: Set up Node.js
+    #   - uses: actions/checkout@v4
+    #   - uses: actions/setup-node@v4
+    #     with:
+    #       node-version: '20'
+    #   - run: npm run build
 
       # - name: Install dependencies
       #   run: npm install
